testdata/parser/negative/5.pdl
#version 100

// unresolved component
composite main(in a, out b) {
	sync(a, b);
}
